deploy/qa/manifests/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: manage-client # 修改为项目的名字
  namespace: socialflow # 修改为项目的组
  labels:
    app: manage-client # 修改为项目的名字
spec:
  replicas: 1 # 根据业务量调整pod的数量
  selector:
    matchLabels:
      app: manage-client
  revisionHistoryLimit: 10
  strategy:
    rollingUpdate:
      maxSurge: 20%
      maxUnavailable: 20%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: manage-client # 修改成项目的名字
    spec:
      restartPolicy: Always
      imagePullSecrets:
        - name: pulluser
      containers:
        - image: <IMAGE>:<IMAGE_TAG>
          name: manage-client # 修改为项目的名字
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80 # 这个端口必须和Dockerfile暴露的一个样
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            timeoutSeconds: 1
            periodSeconds: 3
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 80
              scheme: HTTP
            initialDelaySeconds: 30
            timeoutSeconds: 1
            periodSeconds: 3
            successThreshold: 1
            failureThreshold: 3
          lifecycle:
            preStop:
              exec:
                command: ['/bin/sh', '-c', 'sleep 20']
          args:
            - 'VITE_APP_API_URL=https://manage.sf.lightai.cn'
            - 'VITE_APP_BASE_API=/qa-api'
            - 'VITE_APP_ENV=qa'
            - 'VITE_APP_PORT=8080'
          volumeMounts:
            - name: nginx-conf
              mountPath: /etc/nginx/nginx.conf #将配置文件挂载到哪里
              subPath: nginx.conf
            - name: proxy-conf
              mountPath: /etc/nginx/conf.d/default.conf #将配置文件挂载到哪里
              subPath: default.conf
          resources:
            limits:
              cpu: 1 # CPU限制为1个
              memory: 1Gi # 内存限制1Gi
            requests:
              cpu: 50m # CPU要求
              memory: 512Mi # 内存要求512Gi
      volumes:
        - name: nginx-conf
          configMap:
            name: cm-manage-client
            items:
              - key: nginx.conf
                path: nginx.conf
        - name: proxy-conf
          configMap:
            name: cm-manage-client
            items:
              - key: proxy.conf
                path: default.conf
